# smoldr

./: .gitignore  .rustfmt.toml  .typos.toml  Cargo.toml  Documentation.md  LICENSE-MIT  README.md  build.rs  deny.toml  flake.nix  run_scripts.py  windows.def
.github/workflows/: check.yml
examples/: 16BitTypes.sm  AddTwo.sm  CompileDefine.sm  EpsilonCompare.sm  ExecuteIndirect.sm  RootConst.sm  RootConstArray.sm
examples/rt/: BasicRt.sm  CallShader.sm  RtBasics.sm  as-triangle.sm
src/: backend.rs  error.rs  main.rs  parser.rs  tests.rs
src/backend/: Dx12Helpers.cpp  Dx12Helpers.h  dx12.rs  null.rs
src/parser/: statements.sm  tests.rs
src/tests/: imported-error.sm  imported.sm  run.rs  run.sm
